--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
 
 jobs:
   build:
-    working_directory: ~exampleapplication
+    working_directory: ~/exampleapplication
     docker:
       - image: circleci/node:10.16.3
       steps:
