--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,19 @@ workflows:
           branches:
             only:
               - main
+      - deploy:
+        filters:
+          branches:
+            only:
+              - main
+          requires: 
+            - build          
 
 jobs:
   build:
     working_directory: ~/exampleapplication
     docker:
-    - image: circleci/node:10.16.3
+      - image: circleci/node:10.16.3
     steps:
       - checkout
       - run:
@@ -26,6 +33,14 @@ jobs:
           name: install-npm
           command: npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json"}}
           paths:
             - ./node_modules
+  deploy:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - run:
+        name: deploy-application
+        command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApplication/;git clone https://github.com/OHNCI/exampleapplication.git; source
+        ExampleApplication/deploy.sh"
