--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,5 @@ jobs:
     steps:
       - run:
         name: deploy-application
-        command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf exampleapplication/;git clone https://github.com/OHNCI/exampleapplication.git; source exampleapplication/deploy.sh"
+        command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf exampleapplication/;git clone https://github.com/OHNCI/exampleapplication.git; source 
+        exampleapplication/deploy.sh"
